project/CLEANUP-PW-112 - Prevented scrolling on mobile nav and removed bad mobile nav styling on some pages

--- a/Personal Website/Website/styles/navigation/MobileNav.css
+++ b/Personal Website/Website/styles/navigation/MobileNav.css
@@ -16,6 +16,7 @@
         }
 
         .mobileNav {
+            position:fixed !important;
             display: inline-block;
             position: relative;
             width: 100%;
@@ -23,6 +24,11 @@
             background-color: rgb(128, 128, 128);
             display: table;
             z-index: 100;
+        }
+
+        .mobileNav a {
+            color: white;
+            text-decoration: none;
         }
 
         .mobileNav-container {
